# PyGame_Soccer_Agent-main

./: README.md
AI2-Assignment_1-PyGame_Soccer_Agent-main/: pyproject.toml
AI2-Assignment_1-PyGame_Soccer_Agent-main/soccer_agent/: __init__.py  main.py  policy.py  simulation.py
AI2-Assignment_1-PyGame_Soccer_Agent-main/soccer_agent/Config/: config.py
AI2-Assignment_1-PyGame_Soccer_Agent-main/soccer_agent/GUI/: window.py
AI2-Assignment_1-PyGame_Soccer_Agent-main/soccer_agent/IO/: pygame_io.py
AI2-Assignment_1-PyGame_Soccer_Agent-main/soccer_agent/Math/: geometry.py
AI2-Assignment_1-PyGame_Soccer_Agent-main/soccer_agent/Sprites/: entity.py  field.py  player.py
AI2-Assignment_1-PyGame_Soccer_Agent-main/tests/: test_soccer_agent.py
