[tool.poetry]
name = "soccer_agent"
version = "0.1.0"
description = ""
authors = ["Jaideep Singh Heer <jaideesinghheer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.2"
pygame = "^2.0.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
main = "soccer_agent:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
